welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: class Array takes type parameters
def colonneSuivante(t:Array,n:Int){
                      ^Array1:18: error: class Array takes type parameters
def colonneSuivante(t:Array,n:Int){
                      ^